2004-11-30  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/media/stock_volume.png
	* 16x16/stock/media/stock_volume-0.png
	* 16x16/stock/media/stock_volume-max.png
	* 16x16/stock/media/stock_volume-med.png
	* 16x16/stock/media/stock_volume-min.png
	* 16x16/stock/media/stock_volume-mute.png
	* 24x24/stock/media/stock_volume.png
	* 24x24/stock/media/stock_volume-0.png
	* 24x24/stock/media/stock_volume-max.png
	* 24x24/stock/media/stock_volume-med.png
	* 24x24/stock/media/stock_volume-min.png
	* 24x24/stock/media/stock_volume-mute.png: Volume icons. 
	  Fixes bug #159571

2004-11-28  Rodney Dawes  <dobey@novlel.com>

	* NEWS, configure.in: Update for 2.9.2 release

	* 16x16/stock/generic/Makefile.am:
	* 16x16/stock/generic/stock_weather-night-*.png:
	* 48x48/stock/generic/Makefile.am:
	* 48x48/stock/generic/stock_weather-night-*.png:
	Add icons for gweather on clear or partly cloudy nights (bug #68616)

2004-11-24  Jakub Steiner <jimmac@ximian.com>

	* 24x24/stock/object/stock_new-window.png:
	* 16x16/stock/object/stock_new-window.png: dobey's request

2004-11-22  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/gnome-fs-desktop.png
	* 24x24/filesystems/gnome-fs-desktop.png
	* 32x32/filesystems/gnome-fs-desktop.png: from Garrett and Luca.

2004-11-17  Jakub Steiner <jimmac@ximian.com>

	* scalable/filesystems/gnome-fs-directory-accept.svg
	* scalable/filesystems/gnome-fs-directory-visiting.svg
	* scalable/filesystems/gnome-fs-directory.svg
	* scalable/filesystems/gnome-fs-home.svg: scalable icons from 
	  Luca Ferretti <elle.uca@libero.it>

2004-11-16  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/xcdroast.png: (r)
	* 48x48/apps/burner.png: Use more generic name

2004-11-14  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/document/stock_print-resolution.png:
	* 16x16/stock/document/stock_print-resolution.png: print
	  resolution. Should be handy outside the GIMP
	
2004-11-12  Jakub Steiner <jimmac@ximian.com>
