@@ -27,11 +27,6 @@ icon_DATA =\
 	stock_smart-playlist.png	\
 	stock_repeat.png 		\
 	stock_volume.png 		\
-	stock_volume-0.png 		\
-	stock_volume-max.png 		\
-	stock_volume-med.png 		\
-	stock_volume-min.png 		\
-	stock_volume-mute.png 		\
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
