@@ -1,3 +1,9 @@
+2004-12-01  Rodney Dawes  <dobey@novell.com>
+
+	* 16x16/stock/media/Makefile.am:
+	* 16x16/stock/media/Makefile.am: Revert previous commit
+	The files weren't actually added to CVS
+
 2004-11-30  Jakub Steiner <jimmac@ximian.com>
 
 	* 16x16/stock/media/stock_volume.png
